Moved Files, Fixed responsive design on iPhone 5s

--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 html,
 body {
   /*background: linear-gradient(332deg, #ff8c6a, #fa7575, #910efc);*/
-  background: #fa7575;
+
   background-size: 800% 800%;
   height: 100%;
-  animation: Gradient 30s linear infinite;
+
+}
+.pulsingColor{
+  background: #fa7575;
+  animation: Gradient 15s linear infinite;
+  animation-direction: alternate;
 }
 
 @keyframes Gradient {
@@ -12,12 +17,8 @@ body {
     background: #fa7575;
   }
 
-  50% {
-    background: #910efc;
-  }
-
   100% {
-    background: #fa7575;
+    background: #910efc;
   }
 }
 
@@ -74,10 +75,6 @@ body {
   height: 50px;
   animation: flyIn 1s ease forwards;
 } 
-.btn-group, .navButton{
-  top:-15px;
-  height:30px;
-}
 /*box that takes up the space that the white header background used to take up*/
 .fillerbox {
   width: 100%;
@@ -85,9 +82,7 @@ body {
   opacity: 0%;
   z-index: 0;
 }
-nav{
-  z-index:3000;
-}
+
 /*white header background */
 .oHeader {
   position: fixed;
@@ -148,20 +143,15 @@ nav{
   animation: fadeIn 2s linear forwards;
 }
 
-.btn-light,
-.btn-light:hover,
-.btn-light:active,
-.btn-light:visited {
-  background-color: #5f5f5f !important;
-  color: white;
-}
-
 .btn-dark,
 .btn-dark:hover,
 .btn-dark:active {
   background-color: #646464 !important;
   color: white;
   border: none;
+   background: #fa7575;
+  animation: Gradient 10s linear infinite;
+  animation-direction: alternate-reverse;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -177,12 +167,12 @@ nav{
   width: 6px;
   background-color: white;
   top: 20px;
-  bottom: 0;
+  bottom: -20px;
   left: 10px;
 }
 
 /* Container around content */
-.container-fluid {
+.timeline-card {
   left: 40px;
   right: 1em;
 }
@@ -192,7 +182,7 @@ nav{
 }
 
 /* The circles on the timeline */
-.container-fluid::after {
+.timeline-card::after {
   content: '';
   position: absolute;
   width: 25px;
@@ -222,10 +212,12 @@ nav{
 #return{
   content:'Return where you left off';
 }
+#Info{
+  border: none;
+  margin:10px 10px;
+  padding: 10px 10px;
+}
 @media only screen and (max-width: 700px) {
-  #return{
-    content:'Return';
-  }
   /*The text was small at */
   .card-title {
     font-size: 1.5em;
@@ -236,4 +228,45 @@ nav{
     padding-top: 20px;
     font-size: .9em;
   }
+}
+@media only screen and (max-width: 400px) {
+  /*The text was small at */
+  .card-title {
+    font-size: 1.5em;
+  }
+  #Info{
+    border: none;
+    margin:20px 1em;
+    padding: 10px 10px;
+  }
+  .card-body {
+    margin:10px 0px;
+    padding: 0px 5px 10px 5px;
+    padding-top: 20px;
+    font-size: .9em;
+  }
+  .timeline-card {
+    left: 0px;
+    right: 0em;
+    width:100%;
+  }
+  .timeline{
+    margin: 0em 1em 0em 1em;
+  }
+  .space{
+    height:70px;
+  }
+  /* Removes Line */
+.timeline::after {
+  width: 0px;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+/*Removes circle*/
+.timeline-card::after {
+  width: 0px;
+  height: 0px;
+}
+
 }
